<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/input_type_animal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/typeEditText"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:hint="@string/hint_type_animal"
        android:singleLine="true"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/typeTextView"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView" />

    <TextView
        android:id="@+id/breedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/input_breed_animal"
        app:layout_constraintStart_toStartOf="@+id/typeEditText"
        app:layout_constraintTop_toBottomOf="@+id/typeEditText" />

    <EditText
        android:id="@+id/breedEditText"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:hint="@string/hint_breed_animal"
        android:singleLine="true"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/breedTextView"
        app:layout_constraintTop_toBottomOf="@+id/breedTextView" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/input_year_of_birth"
        app:layout_constraintStart_toStartOf="@+id/breedEditText"
        app:layout_constraintTop_toBottomOf="@+id/breedEditText" />

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:hint="@string/hint_year_of_birth"
        android:singleLine="true"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/yearTextView"
        app:layout_constraintTop_toBottomOf="@+id/yearTextView"
        />

    <TextView
        android:id="@+id/monthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/input_month_of_birth"
        app:layout_constraintStart_toStartOf="@+id/yearEditText"
        app:layout_constraintTop_toBottomOf="@+id/yearEditText" />

    <EditText
        android:id="@+id/monthEditText"
        android:layout_width="212dp"
        android:layout_height="37dp"
        android:hint="@string/hint_month_of_birth"
        android:singleLine="true"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/monthTextView"
        app:layout_constraintTop_toBottomOf="@+id/monthTextView" />


    <Button
        android:id="@+id/respondButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClick_ButtonRespond"
        android:text="Передать"
        app:layout_constraintEnd_toEndOf="@+id/monthEditText"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/monthEditText"
        app:layout_constraintTop_toBottomOf="@+id/monthEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>